Logo no longer collapses

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -192,6 +192,7 @@
   position: absolute;
   top: 50%;
   z-index: 3;
+  right: 10rem;
 }
 
 .hamburger-icon-open {
@@ -255,21 +256,5 @@
   
   .shrunk:hover {
     transform: translateY(4rem) scale(1);
-  }
-}
-
-@media (max-width: 600px) {
-  .logo {
-    display: none;
-  }
-
-  .hamburger-icon-wrapper {
-    left: 5rem;
-  }
-}
-
-@media (min-width: 600px) {
-  .hamburger-icon-wrapper {
-    right: 10rem;
   }
 }
