--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -74,8 +74,8 @@
   
 }
 
-@media (max-width: 767px) {
-  .content {
-    padding-top: 2.5rem;
-  }
-}
+// @media (max-width: 767px) {
+//   .content {
+//     padding-top: 2.5rem;
+//   }
+// }
